--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <!-- included divs to the 4 sections-->
     <div>
         <!--added id's to all h1 to bookmark the links they all have a text-align-->
+        <!--hello-->
         <h1 id="home"> Home</h1>
 
     </div>
