--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
             <br>
                 <a href=""> 
                 <button>send email</button></a>
+                <img src="message.jpg">
             </section>
         </form>
     </div>
